--- a/zucker-easy-orm-core/pom.xml
+++ b/zucker-easy-orm-core/pom.xml
@@ -48,5 +48,11 @@
             <version>2.1.4</version>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
