--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>zucker-easy-orm-core</module>
+        <module>zucker-easy-orm-rdb</module>
     </modules>
 
     <properties>
