--- a/zucker-easy-orm-rdb/pom.xml
+++ b/zucker-easy-orm-rdb/pom.xml
@@ -46,7 +46,7 @@
         <dependency>
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-test</artifactId>
-            <version>3.3.10.RELEASE</version>
+            <version>3.2.8.RELEASE</version>
             <scope>test</scope>
         </dependency>
 
@@ -87,10 +87,11 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc8 -->
         <dependency>
-            <groupId>com.oracle</groupId>
-            <artifactId>ojdbc14</artifactId>
-            <version>10.2.0.1.0</version>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc8</artifactId>
+            <version>12.2.0.1</version>
             <scope>test</scope>
         </dependency>
 
