--- a/zucker-easy-orm-rdb/pom.xml
+++ b/zucker-easy-orm-rdb/pom.xml
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.10.0.pr1</version>
+            <version>2.13.3</version>
             <optional>true</optional>
         </dependency>
 
@@ -46,7 +46,6 @@
         <dependency>
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-test</artifactId>
-            <version>3.2.8.RELEASE</version>
             <scope>test</scope>
         </dependency>
 
@@ -77,7 +76,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.17</version>
+            <version>8.0.29</version>
             <optional>true</optional>
         </dependency>
 
@@ -98,7 +97,7 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>42.2.2</version>
+            <version>42.3.6</version>
             <scope>test</scope>
         </dependency>
 
@@ -106,6 +105,13 @@
             <groupId>com.microsoft.sqlserver</groupId>
             <artifactId>sqljdbc4</artifactId>
             <version>4.0</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <version>1.17.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
